#71304 - Correções na calculadora de impostos gerais

--- a/Glass/Mef.config
+++ b/Glass/Mef.config
@@ -519,6 +519,18 @@
         <export contractType="Glass.Fiscal.Negocios.Entidades.IProvedorIcmsProdutoUf, Glass.Negocios.Entidades" />
       </exports>
     </part>
+
+    <part type="Glass.Fiscal.Negocios.Componentes.ProvedorMvaProdutoUf, Glass.Negocios.Componentes" partCreationPolicy="Shared">
+      <exports>
+        <export contractType="Glass.Fiscal.Negocios.Entidades.IProvedorMvaProdutoUf, Glass.Negocios.Entidades" />
+      </exports>
+    </part>
+
+    <part type="Glass.Fiscal.Negocios.Componentes.ProvedorCodValorFiscal, Glass.Negocios.Componentes" partCreationPolicy="Shared">
+      <exports>
+        <export contractType="Glass.Fiscal.Negocios.IProvedorCodValorFiscal, Glass.Negocios" />
+      </exports>
+    </part>
     
     <part type="Glass.Fiscal.Negocios.Componentes.CalculadoraImposto, Glass.Negocios.Componentes" partCreationPolicy="NonShared">
       <importingConstructor useFirst="true" />
@@ -527,7 +539,7 @@
       </exports>
     </part>
     
-    <part type="Glass.Pedido.Negocios.Componentes.CalculadoraImpostoPedido, Glass.Negocios.Componentes" partCreationPolicy="NonShared">
+    <part type="Glass.Fiscal.Negocios.Componentes.Calculadoras.CalculadoraImpostoPedido, Glass.Negocios.Componentes" partCreationPolicy="NonShared">
       <importingConstructor useFirst="true" />
       <exports>
         <export contractName="Glass.Data.ICalculadoraImposto(Glass.Data.Model.Pedido)" 
@@ -535,5 +547,21 @@
       </exports>
     </part>
 
+    <part type="Glass.Fiscal.Negocios.Componentes.Calculadoras.CalculadoraImpostoPedidoEspelho, Glass.Negocios.Componentes" partCreationPolicy="NonShared">
+      <importingConstructor useFirst="true" />
+      <exports>
+        <export contractName="Glass.Data.ICalculadoraImposto(Glass.Data.Model.PedidoEspelho)"
+                contractType="Glass.Data.ICalculadoraImposto`1[Glass.Data.Model.PedidoEspelho, Glass.Data], Glass.Data" />
+      </exports>
+    </part>
+
+    <part type="Glass.Fiscal.Negocios.Componentes.Calculadoras.CalculadoraImpostoNotaFiscal, Glass.Negocios.Componentes" partCreationPolicy="NonShared">
+      <importingConstructor useFirst="true" />
+      <exports>
+        <export contractName="Glass.Data.ICalculadoraImposto(Glass.Data.Model.NotaFiscal)"
+                contractType="Glass.Data.ICalculadoraImposto`1[Glass.Data.Model.NotaFiscal, Glass.Data], Glass.Data" />
+      </exports>
+    </part>
+    
   </parts>
 </mef.configuration>
