--- a/Glass/Mef.config
+++ b/Glass/Mef.config
@@ -502,6 +502,20 @@
       </exports>
     </part>
 
+    <part type="Glass.Fiscal.Negocios.Componentes.CalculadoraRentabilidadeNotaFiscal, Glass.Negocios.Componentes" partCreationPolicy="Shared">
+      <importingConstructor useFirst="true" />
+      <exports>
+        <export contractName="Glass.Rentabilidade.Negocios.IProvedorItemRentabilidade(Glass.Data.Model.NotaFiscal)"
+                contractType="Glass.Rentabilidade.Negocios.IProvedorItemRentabilidade`1[Glass.Data.Model.NotaFiscal, Glass.Data], Glass.Negocios" />
+        <export contractName="Glass.Rentabilidade.Negocios.IProvedorItemRentabilidade(Glass.Data.Model.ProdutosNf)"
+                contractType="Glass.Rentabilidade.Negocios.IProvedorItemRentabilidade`1[Glass.Data.Model.ProdutosNf, Glass.Data], Glass.Negocios" />
+        <export contractName="Glass.Data.ICalculadoraRentabilidade(Glass.Data.Model.NotaFiscal)"
+                contractType="Glass.Data.ICalculadoraRentabilidade`1[Glass.Data.Model.NotaFiscal, Glass.Data], Glass.Data" />
+        <export contractName="Glass.Data.ICalculadoraRentabilidade(Glass.Data.Model.ProdutosNf)"
+                contractType="Glass.Data.ICalculadoraRentabilidade`1[Glass.Data.Model.ProdutosNf, Glass.Data], Glass.Data" />
+      </exports>
+    </part>
+
     <part type="Glass.Otimizacao.Negocios.Componentes.OtimizacaoFluxo, Glass.Negocios.Componentes">
       <exports>
         <export contractType="Glass.Otimizacao.Negocios.IOtimizacaoFluxo, Glass.Negocios" />
