#73988 Foi alterado para salvar a imagem da peça ao gerar o pedido atraves do orçamento, pois alteriormente somente salvava da peça filha (Imagem cadastrada no produto).

--- a/Comum/Glass.Comum/Glass.Comum.csproj
+++ b/Comum/Glass.Comum/Glass.Comum.csproj
@@ -149,6 +149,7 @@
     <Compile Include="IndicadorIEDestinatario.cs" />
     <Compile Include="IGeradorBoleto.cs" />
     <Compile Include="IProdutoBaixaEstoqueRepositorioImagens.cs" />
+    <Compile Include="IProdutoRepositorioImagens.cs" />
     <Compile Include="IProvedorFeriados.cs" />
     <Compile Include="IProvedorTraducao.cs" />
     <Compile Include="Log\LogAttribute.cs" />
