#74258 $42164 Foi criada a configuração das faixas de rentabilidade e o valores de comissão aplicável
Related Work Items: #243

--- a/Glass.Data/Glass.Data.csproj
+++ b/Glass.Data/Glass.Data.csproj
@@ -1609,6 +1609,7 @@
     <Compile Include="Rentabilidade\ICalculadoraRentabilidade.cs" />
     <Compile Include="Rentabilidade\Model\ConfigRegistroRentabilidade.cs" />
     <Compile Include="Rentabilidade\Model\ExpressaoRentabilidade.cs" />
+    <Compile Include="Rentabilidade\Model\FaixaRentabilidadeComissao.cs" />
     <Compile Include="Rentabilidade\Model\IndicadorFinanceiro.cs" />
     <Compile Include="Seguranca\Model\Token.cs" />
     <Compile Include="SIntegra\Registro61R.cs" />
