--- a/Glass/Mef.config
+++ b/Glass/Mef.config
@@ -454,8 +454,14 @@
       </exports>
     </part>
 
-    <part type="Glass.Rentabilidade.Negocios.Componentes.RentabilidadeFluxo, Glass.Negocios.Componentes"  partCreationPolicy="Shared">
-      <importingConstructor useFirst="false" />
+    <part type="Glass.Rentabilidade.Negocios.Componentes.CalculadoraComissaoRentabilidade, Glass.Negocios.Componentes" partCreationPolicy="Shared">
+      <exports>
+        <export contractName="" contractType="Glass.Rentabilidade.Negocios.ICalculadoraComissaoRentabilidade, Glass.Negocios" member="" />
+      </exports>
+    </part>
+
+    <part type="Glass.Rentabilidade.Negocios.Componentes.RentabilidadeFluxo, Glass.Negocios.Componentes" partCreationPolicy="Shared">
+      <importingConstructor useFirst="true" />
       <exports>
         <export contractName="" contractType="Glass.Rentabilidade.Negocios.IRentabilidadeFluxo, Glass.Negocios" member="" />
         <export contractName="" contractType="Glass.Rentabilidade.IProvedorCalculadoraRentabilidade, Glass.Rentabilidade" member="" />
@@ -465,7 +471,7 @@
         <export contractName="" contractType="Glass.Rentabilidade.Negocios.Entidades.IProvedorConfigRegistroRentabilidade, Glass.Negocios.Entidades" />
       </exports>
     </part>
-    
+
     <part type="Glass.Pedido.Negocios.Componentes.CalculadoraRentabilidadePedido, Glass.Negocios.Componentes" partCreationPolicy="Shared">
       <importingConstructor useFirst="true" />
       <exports>
@@ -576,6 +582,6 @@
                 contractType="Glass.Data.ICalculadoraImposto`1[Glass.Data.Model.NotaFiscal, Glass.Data], Glass.Data" />
       </exports>
     </part>
-    
+
   </parts>
 </mef.configuration>
