--- a/Negocios/Glass.Negocios/Glass.Negocios.csproj
+++ b/Negocios/Glass.Negocios/Glass.Negocios.csproj
@@ -175,6 +175,7 @@
     <Compile Include="Projeto\IFlagArqMesaFluxo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ProvedorControleAlteracao.cs" />
+    <Compile Include="Rentabilidade\ICalculadoraComissaoRentabilidade.cs" />
     <Compile Include="Rentabilidade\IProvedorItemRentabilidade.cs" />
     <Compile Include="Rentabilidade\IRentabilidadeFluxo.cs" />
   </ItemGroup>
