--- a/Glass/Mef.config
+++ b/Glass/Mef.config
@@ -522,6 +522,20 @@
       </exports>
     </part>
 
+    <part type="Glass.Pedido.Negocios.Componentes.VerificadorRentabilidadeLiberacaoPedido, Glass.Negocios.Componentes" partCreationPolicy="Shared">
+      <importingConstructor useFirst="true" />
+      <exports>
+        <export contractName="Glass.Data.IVerificadorRentabilidadeLiberacao(Glass.Data.Model.Pedido)"
+                contractType="Glass.Data.IVerificadorRentabilidadeLiberacao`1[Glass.Data.Model.Pedido, Glass.Data], Glass.Data" />
+      </exports>
+    </part>
+    
+    <part type="Glass.Rentabilidade.Negocios.Componentes.VerificadorRentabilidadeLiberacao, Glass.Negocios.Componentes">
+      <exports>
+        <export contractType="Glass.Rentabilidade.Negocios.IVerificadorRentabilidadeLiberacao, Glass.Negocios" />
+      </exports>
+    </part>
+      
     <part type="Glass.Otimizacao.Negocios.Componentes.OtimizacaoFluxo, Glass.Negocios.Componentes">
       <exports>
         <export contractType="Glass.Otimizacao.Negocios.IOtimizacaoFluxo, Glass.Negocios" />
