#75199 Foi adicionado o case para buscar os dados ao clicar no botão de imprimir o relatorio de vendas sem lucro, pois havia sido removido, porém não localizei nenhum commit onde o relatorio havia sido removido.

--- a/Glass/Glass.UI.Web.csproj
+++ b/Glass/Glass.UI.Web.csproj
@@ -9041,6 +9041,7 @@
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Relatorios\rptPosicaoMateriaPrimaProdutos.rdlc" />
+    <EmbeddedResource Include="Relatorios\rptVendasSemLucr.rdlc" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Relatorios\CFe\" />
