--- a/Glass.Data/Properties/Settings.settings
+++ b/Glass.Data/Properties/Settings.settings
@@ -482,5 +482,23 @@
     <Setting Name="Glass_Data_wsPNFeStatusServico_NFeStatusServico4" Type="(Web Service URL)" Scope="Application">
       <Value Profile="(Default)">https://nfe.svrs.rs.gov.br/ws/NfeStatusServico/NfeStatusServico4.asmx</Value>
     </Setting>
+    <Setting Name="Glass_Data_wsNFeSVANAutorizacao_NFeAutorizacao4" Type="(Web Service URL)" Scope="Application">
+      <Value Profile="(Default)">https://www.sefazvirtual.fazenda.gov.br/NFeAutorizacao4/NFeAutorizacao4.asmx</Value>
+    </Setting>
+    <Setting Name="Glass_Data_wsNFeSVANConsultaProtocolo_NFeConsultaProtocolo4" Type="(Web Service URL)" Scope="Application">
+      <Value Profile="(Default)">https://www.sefazvirtual.fazenda.gov.br/NFeConsultaProtocolo4/NFeConsultaProtocolo4.asmx</Value>
+    </Setting>
+    <Setting Name="Glass_Data_wsNFeSVANInutilizacao_NFeInutilizacao4" Type="(Web Service URL)" Scope="Application">
+      <Value Profile="(Default)">https://www.sefazvirtual.fazenda.gov.br/NFeInutilizacao4/NFeInutilizacao4.asmx</Value>
+    </Setting>
+    <Setting Name="Glass_Data_wsNFeSVANRecepcaoEvento_NFeRecepcaoEvento4" Type="(Web Service URL)" Scope="Application">
+      <Value Profile="(Default)">https://www.sefazvirtual.fazenda.gov.br/NFeRecepcaoEvento4/NFeRecepcaoEvento4.asmx</Value>
+    </Setting>
+    <Setting Name="Glass_Data_wsNFeSVANRetAutorizacao_NFeRetAutorizacao4" Type="(Web Service URL)" Scope="Application">
+      <Value Profile="(Default)">https://www.sefazvirtual.fazenda.gov.br/NFeRetAutorizacao4/NFeRetAutorizacao4.asmx</Value>
+    </Setting>
+    <Setting Name="Glass_Data_wsNFeSVANStatus_NFeStatusServico4" Type="(Web Service URL)" Scope="Application">
+      <Value Profile="(Default)">https://www.sefazvirtual.fazenda.gov.br/NFeStatusServico4/NFeStatusServico4.asmx</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
