#semChamado - Alteração do GDA.config para apontar para o PerconaServer

--- a/Glass/GDA.config
+++ b/Glass/GDA.config
@@ -4,7 +4,7 @@
       <Debug trace="true" />
       <ProvidersConfiguration>
         <!--<Info name="WebGlass" providerName="MySql" connectionstring="Data Source=192.168.25.58;Initial Catalog=arcuare;UId=desenv;Pwd=glass$ync;Min Pool Size=5;Max Pool Size=60;Connect Timeout=60;Allow User Variables=True"/>-->
-        <Info name="WebGlass" providerName="MySql" connectionstring="Data Source=192.168.25.58;Initial Catalog=unividros_kenner;UId=desenv;Pwd=glass$ync;Min Pool Size=5;Max Pool Size=60;Connect Timeout=60;Allow User Variables=True" />
+        <Info name="WebGlass" providerName="MySql" connectionstring="Data Source=192.168.25.66;Initial Catalog=unividros_kenner;UId=root;Pwd=Glass$ync0;Min Pool Size=5;Max Pool Size=60;Connect Timeout=60;Allow User Variables=True" />
       </ProvidersConfiguration>
       <Providers>
         <Provider name="MySql" classNamespace="GDA.Provider.MySql" assembly="GDA.Provider.MySql" />
