--- a/Glass/Glass.UI.Web.csproj
+++ b/Glass/Glass.UI.Web.csproj
@@ -460,6 +460,9 @@
     <Content Include="Cadastros\CadMovInternaEstoqueFiscal.aspx" />
     <Content Include="Cadastros\CadOtimizacao.aspx" />
     <Content Include="Cadastros\CadPedido.js" />
+    <Content Include="Vue\Clientes\Componentes\LstClientes.Filtro.js" />
+    <Content Include="Vue\Clientes\Componentes\LstClientes.js" />
+    <Content Include="Vue\Clientes\Templates\LstClientes.Filtro.html" />
     <Content Include="Cadastros\CadRetificarAntecipContaRec.aspx" />
     <Content Include="Cadastros\CadRetificarArquivoRemessa.aspx" />
     <Content Include="Cadastros\CadRetificarComissaoContaRecebida.aspx" />
