--- a/Glass/Glass.UI.Web.csproj
+++ b/Glass/Glass.UI.Web.csproj
@@ -1670,6 +1670,10 @@
     <Content Include="Vue\_Compartilhado\Mixins\Patch.js" />
     <Content Include="Vue\_Compartilhado\Mixins\Uuid.js" />
     <Content Include="Vue\_Compartilhado\Mixins\Validacao.js" />
+    <Content Include="Vue\_Compartilhado\Servicos\Comissionados.js" />
+    <Content Include="Vue\_Compartilhado\Servicos\Rotas.js" />
+    <Content Include="Vue\_Compartilhado\Servicos\TabelaDescontoAcrescimoCliente.js" />
+    <Content Include="Vue\_Compartilhado\Servicos\FormasPagamento.js" />
     <Content Include="Vue\_Compartilhado\Servicos\Aplicacoes.js" />
     <Content Include="Vue\_Compartilhado\Servicos\Beneficiamentos.js" />
     <Content Include="Vue\_Compartilhado\Servicos\Cep.js" />
